# pack-it

./: .gitignore  404.html  Cargo.toml  README.md  index.html  install.html  mkdocs.yml  usage-advanced.html  usage.html
.github/workflows/: build.yml  docs-build.yml  release.yml
docs/: index.md  install.md  usage-advanced.md  usage.md
install/: index.html
search/: search_index.json
src/: download.rs  main.rs  util.rs
src/pack/: mod.rs
src/question/: asker.rs  mod.rs
src/sources/: curseforge.rs  github.rs  mod.rs  modrinth.rs
usage/: index.html
usage-advanced/: index.html
