[package]
name = "pack-it"
version = "0.1.0"
authors = ["Tom_The_Geek <tomthegeek.8559@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.10"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

toml = "0.5"

structopt = "0.3"
colored = "2"
rustyline = "8"
terminal_size = "0.1"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

sha-1 = "0.9"

log = "0.4"
env_logger = "0.8"

anyhow = "1"
thiserror = "1"
